# client

./: .flake8  .gitignore  .pyspelling.yml  .wordlist.txt  1  LICENSE  README.md  aggregate.py  config.py  conftest.py  connector.py  env.py  expectations.py  feature.py  install.sh  output.txt  pyproject.toml  req.txt  sample.csv  schema.py  stream.py  windows.py  workspace.py
docs/: .gitignore  .pyspelling.yml  Makefile  README.md  algolia.config.json  api.yml  docker-compose.yml  index.yml  pyproject.toml  versions.yml
docs/deprecated/datasets/: on-demand.md  operators.md
docs/examples/: ecommere.py  example.py
docs/examples/api-reference/: client.py  data-types.py  operators_ref.py  rest-api.py  source.py
docs/examples/api-reference/aggregations/: avg.py  count.py  distinct.py  exp-decay-sum.py  firstk.py  lastk.py  max.py  min.py  quantile.py  stddev.py  sum.py
docs/examples/api-reference/client/: branch.py  commit.py  erase.py  extract.py  log.py  lookup.py  query.py  sync.py  xray.py
docs/examples/api-reference/expressions/: basic.py  binary.py  dt.py  eval.py  list.py  num.py  str.py  struct_snip.py
docs/examples/api-reference/operators/: aggregate.py  assign.py  dedup.py  drop.py  dropnull.py  explode.py  filter.py  first.py  groupby.py  join.py  latest.py  rename.py  select.py  summarize.py  transform.py  union.py  window.py
docs/examples/api-reference/sinks/: http_sink.py  kafka.py  kafka_sinks.py  s3.py  s3_sink.py  sink.py  snowflake_sink.py
docs/examples/api-reference/sources/: kafka.py  kinesis.py  s3.py  source.py  sql.py  webhook.py
docs/examples/concepts/: branch.py  introduction.py  sink.py  source.py
docs/examples/data-quality/: data-expectations.py  metaflags.py
docs/examples/datasets/: datasets.py  lookups.py  operators.py  pipelines.py  sources.py
docs/examples/examples/: ecommerce.py
docs/examples/featuresets/: e2e_extraction.py  lifecycle.py  overview.py  reading_datasets.py
docs/examples/getting-started/: quickstart.py
docs/examples/misc/: troubleshooting-guide.py
docs/examples/overview/: concepts.py
docs/examples/security/: rbac.py
docs/examples/testing-and-ci-cd/: unit_tests.py
docs/examples/testing-and-ci-cd/ci_cd/: commit.py  datasets.py  featuresets.py  sync.py  test.py
docs/examples/useful-tips/: debugging.py
docs/pages/api-reference/: aggregations.md  client.md  data-types.md  duration.md  expectations.md  operators.md  rest-api.md  sources.md
docs/pages/api-reference/aggregations/: average.md  count.md  distinct.md  exponential-decay-sum.md  firstk.md  lastk.md  max.md  min.md  quantile.md  stddev.md  sum.md
docs/pages/api-reference/client/: branch.md  cancel-offline-query.md  checkout.md  clone-branch.md  commit.md  delete-branch.md  erase.md  extract-historical-cancel.md  extract-historical-progress.md  extract-historical.md  extract.md  init-branch.md  log.md  lookup.md  query-offline.md  query.md  sync.md  track-offline-query.md  xray.md
docs/pages/api-reference/connectors/: avro.md  bigquery.md  deltalake.md  kafka.md  kinesis.md  mongo.md  protobuf.md  pubsub.md  redshift.md  s3.md  snowflake.md  webhook.md
docs/pages/api-reference/data-types/: core-types.md  duration.md  type-restrictions.md
docs/pages/api-reference/decorators/: dataset.md  extractor.md  featureset.md  indexed.md  inputs.md  meta.md  outputs.md  pipeline.md  sink.md  source.md
docs/pages/architecture/: core-engine.md  cost-optimizations.md  deployment-model.md  formalism.md  key-ideas.md  overview.md  privacy-security.md  read-write-separation.md  storage-model.md  technologies.md
docs/pages/concepts/: branch.md  dataset.md  featureset.md  introduction-old.md  introduction.md  pipeline.md  sink.md  source.md
docs/pages/data-quality/: approach.md  data-expectations.md  drift-monitoring.md  feature-drift.md  immutability-versioning.md  lifecycle-management.md  lineage-validation.md  metaflags.md  ownership.md  strong-typing.md
docs/pages/dataset/: formalism.md  overview.md  pipeline.md  windowing.md
docs/pages/datasets/: lookups.md  on-demand.md  overview.md  pipelines.md  sources.md
docs/pages/development/: ci-cd-workflows.md  console.md  monitoring-alerting.md  unit-testing.md
docs/pages/featureset/: auto-extractors.md  extractor.md  overview.md  resolution.md
docs/pages/featuresets/: composite-features.md  end-to-end-extraction.md  lifecycle-management.md  overview.md  reading-datasets.md  request-based-features.md
docs/pages/getting-started/: concepts.md  examples.md  installation.md  quickstart.md  welcome-to-fennel.md  why-fennel.md
docs/pages/governance/: metaflags.md  privacy-and-security.md
docs/pages/guides/: composite-features.md  lambda-architecture.md  out-of-order-data.md  request-based-features.md
docs/pages/misc/: performance-tuning.md  python-environment.md  troubleshooting-guide.md
docs/pages/monitoring/: newrelic.md  prometheus.md
docs/pages/observability/: alerting.md  datadog.md  errors.md  grafana.md  inspection.md  lineage.md  metrics.md  prometheus.md
docs/pages/orphan/: composite-features.md  lambda-architecture.md  request-based-features.md
docs/pages/overview/: architecture.md  concepts.md  cost-optimizations.md  deployment-model.md
docs/pages/security/: deployment-model.md  overview.md  rbac.md
docs/pages/security-compliance/: cloud-architecture.md  gdpr.md  overview.md  rbac.md  scim.md  sso.md
docs/pages/source/: cdc.md  disorder.md  integrations.md  preproc.md  schema-matching.md  type-parsing.md
docs/pages/testing-and-ci-cd/: ci-cd-workflows.md  integration-tests.md  unit-tests.md
docs/pages/useful-tips/: code-organization.md  data-integration.md  featureset-grouping.md  performance.md  python-environment.md  troubleshooting.md
fennel_data_lib/: Cargo.toml  build.rs  pyproject.toml
fennel_data_lib/src/: arrow_lib.rs  debezium.rs  df.rs  expr.rs  lib.rs  primitive.rs  rowcol.rs  schema.rs  schema_proto.rs  testutils.rs  types.rs  value.rs
fennel_data_lib/src/proto/: fennel.proto.expr.rs  fennel.proto.expression.rs  fennel.proto.schema.rs  mod.rs
(+507 files in other folders)
