[tool.poetry]
name = "fennel-ai"
version = "0.11.3"
description = "The modern realtime feature engineering platform"
authors = ["Fennel AI <developers@fennel.ai>"]
packages = [
    { include = "fennel" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.23.3"
requests = "^2.28.1"
grpcio = "^1.49.1"
grpcio-tools = "^1.49.1"
pydantic = "^1.10.2"
jsondiff = "^2.0.0"
astunparse = "^1.6.3"
types-requests = "^2.28.11"
grandalf = "^0.7"
pytest-mock = "^3.9.0"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
mypy = "^0.981"
pyarrow = "^10.0.1"
mypy-protobuf = "^3.4.0"
pytest-grpc = "^0.8.0"
build = "^0.9.0"
geopy = "^2.3.0"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "docs/examples/datasets/datasets.py",
    "fennel/dataset",
    "fennel/lib",
    "fennel/featureset",
    "fennel/sources",
    "docs/examples",
]
python_files = [
    "docs/examples/*/*.py",
    "docs/examples/*.py",
    "*_test.py",
    "test_*.py",
]

markers = [
    "integration: Those tests that can be run using a rust client",
    "data_integration: Integration tests for Data Integration",
    "slow: Those tests that are slow",
]


[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
exclude = '''(pb2\.py$|grpc\.py$|.*_pb2.pyi|docs/examples)'''

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudpickle"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "grpc"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "grpc_tools"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.protobuf.*"
ignore_missing_imports = true

[tool.black]
line-length = 80
extend-exclude = '''
(
    .*_pb2.py
    | .*_pb2_grpc.py
    | fennel/gen/*.py
)
'''
