[tool.poetry]
name = "fennel-ai"
version = "0.16.16"
description = "The modern realtime feature engineering platform"
authors = ["Fennel AI <developers@fennel.ai>"]
packages = [{ include = "fennel" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.0"
protobuf = "^4.22.4"
frozendict = "^2.3.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
mypy = "^0.981"
pyarrow = "^10.0.1"
vendoring = "^1.2.0"
mypy-protobuf = "^3.4.0"
build = "^0.9.0"
geopy = "^2.3.0"
jupyterlab = "^3.6.3"
pytest-mock = "^3.9.0"
pytest = "^7.1.3"
twine = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# inspired from - https://github.com/pypa/pip/blob/main/pyproject.toml

# vendoring configuration
[tool.vendoring]
destination = "fennel/_vendor"
requirements = "fennel/_vendor/vendor.txt"
namespace = "fennel._vendor"

protected-files = ["vendor.txt"]

# this can be used in case we need to patch any changes to the vendored packages
# see e.g. - https://github.com/pypa/pip/blob/main/tools/vendoring/patches/urllib3.patch
patches-dir = "fennel/tools/vendor/patches/"

[tool.vendoring.transformations]
substitute = []
drop = [
    # remove bin files
    "bin/",
]

[tool.pytest.ini_options]
testpaths = [
    "docs/examples/datasets/datasets.py",
    "fennel/dataset",
    "fennel/lib",
    "fennel/featureset",
    "fennel/sources",
    "docs/examples",
]
python_files = [
    "docs/examples/*/*.py",
    "docs/examples/*.py",
    "*_test.py",
    "test_*.py",
]

markers = [
    "integration: Those tests that can be run using a rust client",
    "data_integration: Integration tests for Data Integration",
    "slow: Those tests that are slow",
]


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [
    'pb2\.py$',
    '.*_pb2.pyi',
    'docs/examples',
    'fennel/_vendor', # ignore vendored packages
]

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudpickle"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.protobuf.*"
ignore_missing_imports = true

[tool.black]
line-length = 80
extend-exclude = '''
(
    .*_pb2.py
    | fennel/_vendor/*
    | fennel/gen/*.py
)
'''
