[tool.poetry]
name = "fennel-ai"
version = "1.5.23"
description = "The modern realtime feature engineering platform"
authors = ["Fennel AI <developers@fennel.ai>"]
packages = [{ include = "fennel" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = {extras = ["performance"], version = "^2.2.2"}
protobuf = "^4.22.4"
frozendict = "^2.3.8"
numpy = [
    { version = "1.24.4", python = "<3.12" },
    { version = "^1.26.3", python = "~3.12" },
]
pytest-timeout = "^2.2.0"
pytest = "7.1.3"
pytest-rerunfailures = "^13.0"
sortedcontainers = "^2.4.0"
typing-extensions = "^4.12.0"
fennel-data-lib = "0.1.18"
pyarrow = "^14.0.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = ">=24.0.0"
curlify = "2.2.1"
mypy = "^0.981"
pyarrow = "^14.0.2"
vendoring = "^1.2.0"
mypy-protobuf = "^3.4.0"
build = "^0.9.0"
geopy = "^2.3.0"
jupyterlab = "^4.0.10"
pytest-mock = "^3.9.0"
pytest = "^7.1.3"
twine = "^4.0.0"
pyspelling = "^2.8.2"
# A pyyaml bug when using cython, https://github.com/yaml/pyyaml/issues/601
pyyaml = "^6.0.1"

# For production, we use poetry to build the python package

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# For local development, we use maturin to build the rust library

# [build-system]
# requires = ["maturin", "setuptools>=42", "wheel"]
# build-backend = "maturin"

# [tool.maturin]
# name = "fennel_data_lib"
# sdist-directory = "python_package"
# manifest-path = "../server/fennel_data_lib/Cargo.toml"


# inspired from - https://github.com/pypa/pip/blob/main/pyproject.toml
# inspired from - https://github.com/pypa/pip/blob/main/pyproject.toml

# vendoring configuration
[tool.vendoring]
destination = "fennel/_vendor"
requirements = "fennel/_vendor/vendor.txt"
namespace = "fennel._vendor"

protected-files = ["vendor.txt"]

# this can be used in case we need to patch any changes to the vendored packages
# see e.g. - https://github.com/pypa/pip/blob/main/tools/vendoring/patches/urllib3.patch
patches-dir = "fennel/tools/vendor/patches/"

[tool.vendoring.transformations]
substitute = []
drop = [
    # remove bin files
    "bin/",
]


[tool.pytest.ini_options]
testpaths = [
    "docs/examples/datasets/datasets.py",
    "fennel/dataset",
    "fennel/lib",
    "fennel/featureset",
    "fennel/connectors",
    "docs/examples",
    "examples",
]
python_files = [
    "docs/examples/*/*.py",
    "docs/examples/*.py",
    "*_test.py",
    "test_*.py",
]

markers = [
    "integration: Those tests that can be run using a rust client",
    "data_integration: Integration tests for Data Integration",
    "slow: Those tests that are slow",
]


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [
    'pb2\.py$',
    '.*_pb2.pyi',
    'docs/examples',
    'examples',
    'fennel/_vendor', # ignore vendored packages
]

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudpickle"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy"
ignore_errors = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.protobuf.*"
ignore_missing_imports = true

[tool.black]
line-length = 80
extend-exclude = '''
(
    .*_pb2.py
    | fennel/_vendor/*
    | fennel/gen/*.py
)
'''
