[tool.poetry]
name = "fennel docs"
version = "0.1.0"
description = "Documentation for Fennel SDK"
authors = ["Fennel AI <developers@fennel.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"
fennel-ai = ">=0.8.2"
black = "^23.1.0"
geopy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "examples/",
]
python_files = [
    "*.py",
]

[[tool.mypy.overrides]]
module = "pyarrow"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudpickle"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy"
ignore_errors = true
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = "grpc"
ignore_missing_imports = true

[tool.black]
line-length = 80
extend-exclude = '''
(
    .*_pb2.py
    | .*_pb2_grpc.py
    | fennel/gen/*.py
)
'''
