[package]
name = "fennel_data_lib"
version = "0.1.27"
edition = "2021"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.66"
arrow = { version = "51.0.0", features = ["pyarrow"] }
pyo3 = { version = "0.20.0" }
bytes = { version = "1.3.0", features = ["serde"] }
log = "0.4.21"
byteorder = "1.4.3"
polars = { version = "0.41.0", features = [
    "lazy",
    "dtype-full",
    "abs",
    "round_series",
    "strings",
    "regex",
    "concat_str",
    "is_in",
    "list_drop_nulls",
    "timezones",
    "extract_jsonpath",
    "list_any_all",
    "list_eval",
    "string_to_integer",
    "repeat_by",
    "log",
    "trigonometry",
] }
polars-arrow = { version = "0.41.0", features = ["arrow_rs"] }
polars-plan = "0.41.0"
chrono = { version = "0.4.31", features = ["serde"] }
prost = "0.12.1"
prost-types = "0.12.1"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
base64 = "0.21.4"
integer-encoding = "3.0.0"
num-traits = "0.2.17"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
rust_decimal = "1.33.1"
apache-avro = "0.16.0"
regex = "1.10.1"
smartstring = { version = "1.0.1", features = ["serde"] }
itertools = "0.10"
tempfile = "3.5.0"
csv = "1.1.6"
smallvec = { version = "1.10.0", features = ["serde"] }
num-bigint = "0.4.4"
uuid = { version = "1.2.1", features = ["v4"] }
parquet = "51.0.0"
protofish = { git = "https://github.com/fennel-ai/protofish.git", branch = "main" }
derivative = "2.2.0"
chrono-tz = "0.9.0"
jsonpath-rust = "0.7.1"
py_execute_interop = { path = "../py_execute_interop" }
rand = "0.8"

[features]
# Need to use maturin build --features "extension-module" to build the python package
extension-module = ["pyo3/extension-module"]


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = "off"
opt-level = 0
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
incremental = false
lto = "thin"
opt-level = 3
panic = "abort"
