[project]
name = "fennel_data_lib"
dynamic = ["version"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]

[tool.maturin]
include = [
    { format = "sdist", path = ".cargo/*" },
    { format = "sdist", path = "build.rs" },
    { format = "sdist", path = "Cargo.lock" },
]

[tool.mypy]
python_version = "3.8"